--- a/bmeyer1745ex3c/custom.css
+++ b/bmeyer1745ex3c/custom.css
@@ -1,11 +1,12 @@
 ﻿/* change the background color */
 .navbar-custom {
-    background-color: #ff00dc;
+    background-color: #00ffff;
+    
 }
 /* change the brand and text color */
 .navbar-custom .navbar-brand,
 .navbar-custom .navbar-text {
-    color: #000000;
+    color: #ff0000;
 }
 /* change the link color */
 .navbar-custom .navbar-nav .nav-link {
@@ -14,7 +15,7 @@
 /* change the color of active or hovered links */
 .navbar-custom .nav-item.active .nav-link,
 .navbar-custom .nav-item:hover .nav-link {
-    color: #ffffff;
+    color: #ffd800;
 }
 
 .footer {
@@ -22,7 +23,7 @@
     left: 0;
     bottom: 0;
     width: 100%;
-    background-color: #0055aa;
-    color: rgba(255,255,255,.8);
+    background-color: #00ffff;
+    color: #000000;
     text-align: center;
 }
